--- a/index.html
+++ b/index.html
@@ -1,28 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<header>
-    <h1>
-        
-    </h1>
-</header>
-<main>
-    <section class="cards"></section>
-    <section class="cards"></section>
-    <section class="cards"></section>
-    <section class="cards"></section>
-    <section class="cards"></section>
-    <section class="cards"></section>
-</main>
-<footer>
-    <h2>
 
-    </h2>
-</footer>
+<body>
+    <header></header>
+    <h1>CSS Tips and Tricks!</h1>
+    <h2>The secrets of CSS!</h2>
+    <main>
+        <section class="card">
+            <h3>Flexbox row</h3>
+            <p>Flexbox rows make things nice and easy!</p>
+            <pre>
+<code>.flexbox {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+</code>
+</pre>
+        </section>
+        <section class="card">
+            <h3>Flexbox row</h3>
+            <p>Flexbox rows make things nice and easy!</p>
+            <pre>
+<code>.flexbox {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+</code>
+</pre>
+        </section>
+        <section class="card">
+            <h3>Flexbox row</h3>
+            <p>Flexbox rows make things nice and easy!</p>
+            <pre>
+<code>.flexbox {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+</code>
+</pre>
+        </section>
+        <section class="card">
+            <h3>Flexbox row</h3>
+            <p>Flexbox rows make things nice and easy!</p>
+            <pre>
+<code>.flexbox {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+</code>
+</pre>
+        </section>
+        <section class="card">
+            <h3>Flexbox row</h3>
+            <p>Flexbox rows make things nice and easy!</p>
+            <pre>
+<code>.flexbox {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+</code>
+</pre>
+        </section>
+        <section class="card">
+            <h3>Flexbox row</h3>
+            <p>Flexbox rows make things nice and easy!</p>
+            <pre>
+<code>.flexbox {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+</code>
+</pre>
+        </section>
+    </main>
+    <footer>
+        <h2>Made with love and CSS!</h2>
+    </footer>
+</body>
+
 </html>
